--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,6 +2,13 @@
 
 {% block content %}
     <article class="pb-4">
+        <aside class="actions">
+            {% if user.is_authenticated %}
+                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
+                    {% include './icons/pencil-fill.svg' %}
+                </a>
+            {% endif %}
+        </aside>
         <h2 class="font-bold">{{ post.title }}</h2>
         {% if post.published_date %}
             <time class="italic">Publié le {{ post.published_date }} par {{ post.author }}</time>
