add: statuses components

--- a/client/app/src/stylesheets/index.css
+++ b/client/app/src/stylesheets/index.css
@@ -12,7 +12,7 @@
   line-height: 1.5;
 
   color-scheme: light dark;
-  color: black;
+  color: rgb(15 23 42);
   background-color: rgb(242, 239, 235);
 
   font-synthesis: none;
